    state information" is added as well to display the
    information of the saved state. (Wengier)
  - DOSBox-X will now use native dialog box to display
    quit warnings and save state errors. (Wengier)
  - Changed some DOS error messages (such as "Illegal
    command" which now reads "Bad command or filename")
    similar to real DOS systems. (Wengier)
  - Improved the -z (move virtual drive Z:) function of
    MOUNT command. You can move the virtual drive as
    many times as you want, and save/load states will
    work even after you move the Z: drive. (Wengier)
  - Enhanced the config option "freesizecap" to allow
    the setting "fixed" which is the same as "false",
    and a new setting "relative" is added, which will
    be similar to the setting "fixed" but the reported
    free disk size will also change relative to the
    change of the free disk size ever since. (Wengier)
  - Support for FluidSynth MIDI Synthesizer is now
    included in the MinGW builds by default just like
    Visual Studio builds. Set "mididevice=fluidsynth"
    and a soundfont file to use it. (Wengier)
  - Add menu item "Show MIDI device" under "Sound" menu
    to show the current MIDI device and soundfont file
    (or ROM path for MT32) in use. (Wengier)
  - Added "Mount multiple disk/CD images" option to the
    mounting options of the Drive menu to allow users
    to mount more than one disk/CD images to a drive,
    swappable from the menu. (Wengier)
  - Added new CPU types to the "Emulate CPU speed" menu
    group namely 286-25MHz, 386DX-25MHz, 486DX4-100MHz,
    486DX5-133MHz, Pentium-60MHz, Pentium-75MHz, and
    Pentium-90MHz. Thanks again for the data provided
    by the user maximus105. (Wengier)
  - You can now select a special key (e.g. Alt+Tab,
    Ctrl+Break, Ctrl+Alt+Del, etc) to be sent from the
    key defined in the mapper editor. The key can be
    selected (Ctrl+Alt+Del by default) from the "Send
    special key" menu group in "Main" menu. (Wengier)